<resources>
    <string name="app_name">HadirUKM Konvo</string>
    <string name="action_settings">Settings</string>
    <string name="txt_copyright">Hak Cipta Terpelihara &#169; Fakulti Teknologi dan Sains Maklumat (FTSM) 2021–2022</string>
    <string name="txt_no_connection">No connection</string>
    <string name="txt_no_connection_helper">You are not connected to the internet.\nPlease check your internet settings and try again.</string>
    <string name="txt_OK">OK</string>
    <string name="txt_recognize">Recognize</string>
    <string name="txt_register">Register</string>
    <string name="txt_welcome">Welcome to Akademia Siber Teknopolis</string>
    <string name="txt_welcome_bm">Selamat datang</string>
    <string name="txt_welcome_convo">Selamat datang ke\nMajlis Konvokesyen UKM ke-50</string>
    <string name="txt_convo_name">Majlis Konvokesyen UKM ke-50</string>
    <string name="txt_convo_name_template">Majlis Konvokesyen UKM ke-50 (Sidang [s])</string>
    <string name="txt_select">Please select one of the following</string>
    <string name="txt_register_new_visitor">Register as New Visitor</string>
    <string name="txt_staff">Staff</string>
    <string name="txt_guest">Guest</string>
    <string name="txt_convo_instruction">Sila tekan sini untuk mula</string>
    <string name="txt_sidang_template">Sidang [s]</string>
    <string name="txt_canselor">Canselor</string>
    <string name="txt_please_wait">Sila tunggu</string>
    <string name="txt_recognized_face">Recognized Face</string>
    <string name="txt_no_faces_trained">No faces trained</string>
    <string name="txt_no_face_detected">No face detected</string>
    <string name="txt_face_unable_to_recognize">Face cannot be recognized.\nPlease register as a new visitor.</string>
    <string name="txt_tarikh_masa_masuk">Tarikh dan masa masuk: [t]</string>
    <string name="txt_ukmper_template">K000000</string>
    <string name="txt_error">An error occurred. Please try again.</string>
    <string name="txt_failed_to_load">Failed to load [o]. Please try again.</string>
    <string name="txt_recognise_face_instruction">Sila berdiri di hadapan kamera dengan pelitup muka dibuka.\n<i>Please stand in front of the camera with face mask opened.</i></string>
    <string name="txt_training_face_instruction">1. Locate your face at the center of the camera preview.\n2. Your Face preview will appear here.\n3. Click the Add button to save face.</string>
    <string name="txt_press_back_to_exit">Press back again to exit</string>
</resources>