<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_convo"
    tools:context=".ScanActivity">

    <!-- LinearLayout as Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/light_blue_200"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_actions"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/light_blue_200"
            android:contentDescription="@null"
            android:src="@drawable/baseline_menu_black_24dp" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:text="@string/txt_convo_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btn_switch_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/light_blue_200"
            android:contentDescription="@null"
            android:src="@drawable/baseline_flip_camera_ios_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_copyright"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <!-- Camera view -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <androidx.camera.view.PreviewView
                android:id="@+id/pv_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.camera.view.PreviewView>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <!-- Bottom view -->
            <Button
                android:id="@+id/btn_action"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/light_blue_200_dark"
                android:elevation="16dp"
                android:padding="16dp"
                android:text="@string/txt_register"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <!-- Training Face Layout -->
            <LinearLayout
                android:id="@+id/ll_training_face"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_face_preview"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="#2C2B74CC"
                    android:contentDescription="@null"
                    android:elevation="1dp"
                    tools:srcCompat="@android:drawable/screen_background_light_transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/txt_training_face_instruction"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/btn_add_face"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:contentDescription="@null"
                        android:elevation="4dp"
                        app:srcCompat="@android:drawable/ic_input_add" />

                </LinearLayout>

            </LinearLayout>

            <!-- Recognise Face Layout -->
            <LinearLayout
                android:id="@+id/ll_recognise_face"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/txt_recognise_face_instruction"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_please_wait"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/light_blue_800"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_staff_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_grey_600"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_staff_centre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_grey_600"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_copyright"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/light_blue_200_dark" />

</RelativeLayout>
